add texinfo manual
Signed-off-by: Mattias Andrée <maandree@member.fsf.org>

--- a/Makefile.in
+++ b/Makefile.in
@@ -53,6 +53,13 @@ _H = libhaiku
 _HEADER_DIRLEVELS = 1
 _CPPFLAGS = -D'PACKAGE="$(PKGNAME)"' -D'PROGRAM_VERSION="$(_VERSION)"'
 
+# Used by mk/texinfo.mk
+_TEXINFO_DIRLEVELS = 2
+_INFOPARTS = 0
+_HAVE_TEXINFO_MANUAL = yes
+_HTML_FILES = Free-Software-Needs-Free-Documentation.html  GNU-Free-Documentation-License.html  \
+              GNU-General-Public-License.html  index.html  Overview.html
+
 # Used by mk/man.mk
 _MAN_PAGE_SECTIONS = 3 7
 _MAN_3 = libhaiku_perror
@@ -62,7 +69,11 @@ _MAN_7 = libhaiku
 _COPYING = COPYING
 
 # Used by mk/dist.mk
+___EVERYTHING_INFO = autohaltd titlepage-data content hardcopy-copying  \
+                     appx/fdl appx/free-software-needs-free-documentation appx/gpl  \
+                     reusable/macros reusable/paper reusable/titlepage chap/overview
 _EVERYTHING = $(__EVERYTHING_ALL_COMMON) src/libhaiku.c src/libhaiku.h  \
+              $(foreach F,$(___EVERYTHING_INFO),doc/info/$(F).texinfo)  \
               DEPENDENCIES INSTALL NEWS
 
 # }}
