misc + change license + changed behaviour of libhaiku_perror
Signed-off-by: Mattias Andrée <maandree@kth.se>

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
-_/
-/bin/
-/aux/
-/obj/
-\#*\#
-.*
-!.git*
+*\#*
 *~
-*.bak
-*.new
-*.swo
-*.swp
-*.out
 *.o
-*.su
-*.gch
-*.info
-*.pdf
-*.ps
-*.dvi
-/config.status
-/Makefile
-
+*.lo
+*.a
+*.so
+*.so.*
+*.dylib
